generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================
// ADMIN & AUTHENTICATION
// ============================================

model Admin {
  adminId   Int       @id @default(autoincrement()) @map("admin_id")
  username  String    @unique
  email     String    @unique
  password  String // hashed with bcrypt
  role      AdminRole @default(EDITOR)
  isActive  Boolean   @default(true) @map("is_active")
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")

  @@map("ADMIN")
}

// ============================================
// MAIN ENTITIES
// ============================================

model Culture {
  cultureId          Int                @id @default(autoincrement()) @map("culture_id")
  slug               String             @unique
  cultureName        String             @map("culture_name")
  originIsland       String             @map("origin_island")
  province           String             @map("province")
  cityRegion         String             @map("city_region")
  classification     String?
  characteristics    String?            @db.Text
  conservationStatus StatusKonservasi   @default(TREATED) @map("conservation_status")
  latitude           Float?
  longitude          Float?
  status             StatusPublish      @default(DRAFT) @map("status")
  createdAt          DateTime           @default(now()) @map("created_at")
  updatedAt          DateTime           @updatedAt @map("updated_at")
  subcultures        Subculture[]
  cultureAssets      CultureAsset[]
  cultureReferences  CultureReference[]

  @@map("CULTURE")
}

model Subculture {
  subcultureId          Int                   @id @default(autoincrement()) @map("subculture_id")
  slug                  String                @unique @map("slug")
  subcultureName        String                @map("subculture_name")
  traditionalGreeting   String                @map("traditional_greeting") @db.Text
  greetingMeaning       String?               @map("greeting_meaning")
  explanation           String                @db.Text
  cultureId             Int                   @map("culture_id")
  status                StatusPublish         @default(DRAFT) @map("status")
  displayPriorityStatus StatusPriority?       @default(LOW) @map("display_priority_status")
  conservationStatus    StatusKonservasi      @default(TREATED) @map("conservation_status")
  createdAt             DateTime              @default(now()) @map("created_at")
  updatedAt             DateTime              @updatedAt @map("updated_at")
  culture               Culture               @relation(fields: [cultureId], references: [cultureId])
  codificationDomains   CodificationDomain[]
  subcultureAssets      SubcultureAsset[]
  subcultureReferences  SubcultureReference[]

  @@map("SUBCULTURE")
}

model CodificationDomain {
  domainId     Int           @id @default(autoincrement()) @map("domain_id")
  code         String
  domainName   String        @map("domain_name")
  explanation  String
  subcultureId Int           @map("subculture_id")
  status       StatusPublish @default(DRAFT) @map("status")
  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @updatedAt @map("updated_at")
  subculture   Subculture    @relation(fields: [subcultureId], references: [subcultureId])
  lexicons     Lexicon[]

  @@map("CODIFICATION_DOMAIN")
}

model Lexicon {
  lexiconId                        Int                @id @default(autoincrement()) @map("lexicon_id")
  slug                             String             @unique @map("slug")
  lexiconWord                      String             @map("lexicon_word")
  ipaInternationalPhoneticAlphabet String?            @map("ipa_international_phonetic_alphabet")
  transliteration                  String
  etymologicalMeaning              String             @map("etymological_meaning")
  culturalMeaning                  String             @map("cultural_meaning")
  commonMeaning                    String             @map("common_meaning")
  translation                      String
  variant                          String?
  variantTranslations              String?            @map("variant_translations")
  otherDescription                 String?            @map("other_description") @db.Text
  domainId                         Int                @map("domain_id")
  preservationStatus               StatusKonservasi   @default(MAINTAINED) @map("preservation_status")
  contributorId                    Int                @map("contributor_id")
  status                           StatusPublish      @default(DRAFT) @map("status")
  createdAt                        DateTime           @default(now()) @map("created_at")
  updatedAt                        DateTime           @updatedAt @map("updated_at")
  contributor                      Contributor        @relation(fields: [contributorId], references: [contributorId])
  codificationDomain               CodificationDomain @relation(fields: [domainId], references: [domainId])
  lexiconAssets                    LexiconAsset[]
  lexiconReferences                LexiconReference[]

  @@map("LEXICON")
}

model Contributor {
  contributorId         Int                @id @default(autoincrement()) @map("contributor_id")
  contributorName       String             @map("contributor_name")
  institution           String
  email                 String
  expertiseArea         String             @map("expertise_area")
  contactInfo           String             @map("contact_info")
  displayPriorityStatus StatusPriority?    @default(LOW) @map("display_priority_status")
  isCoordinator         Boolean            @default(false) @map("is_coordinator")
  coordinatorStatus     StatusCoordinator  @default(INACTIVE) @map("coordinator_status")
  registeredAt          DateTime           @default(now()) @map("registered_at")
  lexicons              Lexicon[]
  contributorAssets     ContributorAsset[]

  @@map("CONTRIBUTOR")
}

model Asset {
  assetId           Int                @id @default(autoincrement()) @map("asset_id")
  fileName          String             @map("file_name")
  fileType          AssetType          @map("file_type")
  description       String?            @map("description") @db.Text
  url               String             @map("url")
  fileSize          String?            @map("file_size")
  hashChecksum      String?            @map("hash_checksum")
  metadataJson      String?            @map("metadata_json")
  status            StatusFile         @default(ARCHIVED) @map("status")
  createdAt         DateTime           @default(now()) @map("created_at")
  updatedAt         DateTime           @updatedAt @map("updated_at")
  lexiconAssets     LexiconAsset[]
  subcultureAssets  SubcultureAsset[]
  cultureAssets     CultureAsset[]
  contributorAssets ContributorAsset[]

  @@map("ASSET")
}

model Reference {
  referenceId          Int                   @id @default(autoincrement()) @map("reference_id")
  title                String                @map("title")
  referenceType        ReferenceType         @map("reference_type")
  description          String?               @map("description") @db.Text
  url                  String?
  authors              String?               @map("authors")
  publicationYear      String?               @map("publication_year")
  topicCategory        String?               @map("topic_category")
  status               StatusPublish         @default(DRAFT)
  createdAt            DateTime              @default(now()) @map("created_at")
  updatedAt            DateTime              @updatedAt @map("updated_at")
  lexiconReferences    LexiconReference[]
  subcultureReferences SubcultureReference[]
  cultureReferences    CultureReference[]
  aboutReferences      AboutReference[]

  @@map("REFERENCE")
}

model AboutReference {
  aboutReferenceId Int        @id @default(autoincrement()) @map("about_reference_id")
  referenceId      Int        @map("reference_id")
  displayOrder     Int        @default(0) @map("display_order")
  isActive         Boolean    @default(true) @map("is_active")
  createdAt        DateTime   @default(now()) @map("created_at")
  updatedAt        DateTime   @updatedAt @map("updated_at")
  reference        Reference  @relation(fields: [referenceId], references: [referenceId])

  @@map("ABOUT_REFERENCE")
}

// ============================================
// JUNCTION TABLES (Many-to-Many Relations)
// ============================================

model LexiconAsset {
  lexiconId Int               @map("lexicon_id")
  assetId   Int               @map("asset_id")
  assetRole LeksikonAssetRole @map("asset_role")
  createdAt DateTime          @default(now()) @map("created_at")
  asset     Asset             @relation(fields: [assetId], references: [assetId])
  lexicon   Lexicon           @relation(fields: [lexiconId], references: [lexiconId])

  @@id([lexiconId, assetId])
  @@map("LEXICON_ASSETS")
}

model SubcultureAsset {
  subcultureId Int                 @map("subculture_id")
  assetId      Int                 @map("asset_id")
  assetRole    SubcultureAssetRole @map("asset_role")
  createdAt    DateTime            @default(now()) @map("created_at")
  asset        Asset               @relation(fields: [assetId], references: [assetId])
  subculture   Subculture          @relation(fields: [subcultureId], references: [subcultureId])

  @@id([subcultureId, assetId, assetRole])
  @@map("SUBCULTURE_ASSETS")
}

model CultureAsset {
  cultureId Int              @map("culture_id")
  assetId   Int              @map("asset_id")
  assetRole CultureAssetRole @map("asset_role")
  createdAt DateTime         @default(now()) @map("created_at")
  asset     Asset            @relation(fields: [assetId], references: [assetId])
  culture   Culture          @relation(fields: [cultureId], references: [cultureId])

  @@id([cultureId, assetId])
  @@map("CULTURE_ASSETS")
}

model ContributorAsset {
  contributorId Int                  @map("contributor_id")
  assetId       Int                  @map("asset_id")
  assetNote     ContributorAssetRole @map("asset_note")
  createdAt     DateTime             @default(now()) @map("created_at")
  asset         Asset                @relation(fields: [assetId], references: [assetId])
  contributor   Contributor          @relation(fields: [contributorId], references: [contributorId])

  @@id([contributorId, assetId])
  @@map("CONTRIBUTOR_ASSETS")
}

// ============================================
// REFERENCE JUNCTION TABLES
// ============================================

model LexiconReference {
  lexiconId     Int                   @map("lexicon_id")
  referenceId   Int                   @map("reference_id")
  referenceRole LexiconReferenceRole? @map("reference_role")
  displayOrder  Int?                  @default(0) @map("display_order")
  createdAt     DateTime              @default(now()) @map("created_at")
  lexicon       Lexicon               @relation(fields: [lexiconId], references: [lexiconId])
  reference     Reference             @relation(fields: [referenceId], references: [referenceId])

  @@id([lexiconId, referenceId])
  @@map("LEXICON_REFERENCE")
}

model SubcultureReference {
  subcultureId  Int                      @map("subculture_id")
  referenceId   Int                      @map("reference_id")
  referenceRole SubcultureReferenceRole? @map("reference_role")
  displayOrder  Int?                     @default(0) @map("display_order")
  createdAt     DateTime                 @default(now()) @map("created_at")
  subculture    Subculture               @relation(fields: [subcultureId], references: [subcultureId])
  reference     Reference                @relation(fields: [referenceId], references: [referenceId])

  @@id([subcultureId, referenceId])
  @@map("SUBCULTURE_REFERENCE")
}

model CultureReference {
  cultureId    Int                    @map("culture_id")
  referenceId  Int                    @map("reference_id")
  referenceRole CultureReferenceRole? @map("reference_role")
  displayOrder Int?                   @default(0) @map("display_order")
  createdAt    DateTime               @default(now()) @map("created_at")
  culture      Culture                @relation(fields: [cultureId], references: [cultureId])
  reference    Reference              @relation(fields: [referenceId], references: [referenceId])

  @@id([cultureId, referenceId])
  @@map("CULTURE_REFERENCE")
}

// ============================================
// ENUMS
// ============================================

enum AdminRole {
  SUPER_ADMIN
  EDITOR
  VIEWER
}

enum StatusCoordinator {
  ACTIVE
  INACTIVE
  ALUMNI
}

enum ReferenceType {
  JOURNAL
  BOOK
  ARTICLE
  WEBSITE
  REPORT
  ORAL_TRADITION 
  FIELD_OBSERVATION
}

enum AssetType {
  PHOTO
  AUDIO
  VIDEO
  MODEL_3D
}

enum StatusPublish {
  DRAFT
  PUBLISHED
  ARCHIVED
}

enum StatusFile {
  ACTIVE
  PROCESSING
  ARCHIVED
  CORRUPTED
  PUBLISHED
}

enum StatusKonservasi {
  MAINTAINED
  TREATED
  CRITICAL
  ARCHIVED
}

enum StatusPriority {
  HIGH
  MEDIUM
  LOW
  HIDDEN
}

// ============================================
// REFERENCE ROLE ENUMS
// ============================================

enum CultureReferenceRole {
  PRIMARY_SOURCE
  SECONDARY_SOURCE
  SUPPORTING
}

enum SubcultureReferenceRole {
  PRIMARY_SOURCE
  SECONDARY_SOURCE
  SUPPORTING
}

enum LexiconReferenceRole {
  PRIMARY_SOURCE
  SECONDARY_SOURCE
  SUPPORTING
}

// ============================================
// ASSET ROLE ENUMS
// ============================================

enum CultureAssetRole {
  HIGHLIGHT
  THUMBNAIL
  GALLERY
  BANNER
  VIDEO_DEMO
  MODEL_3D
}

enum SubcultureAssetRole {
  HIGHLIGHT
  THUMBNAIL
  GALLERY
  BANNER
  VIDEO_DEMO
  MODEL_3D
}

enum LeksikonAssetRole {
  GALLERY
  PRONUNCIATION
  VIDEO_DEMO
  MODEL_3D
}

enum ContributorAssetRole {
  LOGO
  SELF_PHOTO
  SIGNATURE
  CERTIFICATE
  GALLERY
  BANNER
  VIDEO_DEMO
}
